Created the layout for Expected Results

--- a/GGC.TestCaseGenerator/Views/Home/ExpectedResult.cshtml
+++ b/GGC.TestCaseGenerator/Views/Home/ExpectedResult.cshtml
@@ -9,23 +9,21 @@
 </style>
 
 <div class="jumbotron">
-    <h1>Welcome to Testing centers</h1>
-    <br>
     <div id="ER1">
         <br />
         <form>
             <h3><b>Click to add other Expected Results</b></h3><button onclick="appendRow()" value="Add box">Add Expected Results</button>
             </br>
-            <section>
-            <label>Enter Expected Results Name:</label>
-            <input placeholder="Enter Expected Results Name Here" type="text" style="width:200px" />
-            <br />
-            <label>Enter Expected Results Text:</label>
-            <input placeholder="Enter Equilvalence Class Here" type="text" style="width:200px" />
-            <br>
-            <label>Enter Expected Results Condition:</label>
-            <input placeholder="Enter Expected Results Condition" type="text" style="width:200px" />
-            </section>
+            
+                <label>Enter Expected Results Name:</label>
+                <input id="ERName"placeholder="Enter Expected Results Name Here" type="text" style="width:200px" />
+                <br />
+                <label>Enter Expected Results Text:</label>
+                <input placeholder="Enter Equilvalence Class Here" type="text" style="width:200px" />
+                <br>
+                <label>Enter Expected Results Condition:</label>
+                <input placeholder="Enter Expected Results Condition" type="text" style="width:200px" />
+          
         </form>
     </div>
     <script>
