--- a/GGC.TestCaseGenerator/Views/Home/InputParameter.cshtml
+++ b/GGC.TestCaseGenerator/Views/Home/InputParameter.cshtml
@@ -23,9 +23,9 @@
 
         <div id="IP2">
             <br />
-
-            <label><b>Click to add other Equilvalence Classes</b></label><button onclick="appendRow2()" value="Add box">Add Equilavalence Classes</button>
-            </br>
+            <label><b>Click to add other Equilvalence Classes</b></label>
+            <br />
+            <button onclick="appendRow2()" value="Add box">Add Equilavalence Classes</button><br />
             <label id="IN1" name="IN2">Enter Equilvalence Class Name:</label>
             <input id="IPara1" placeholder="Enter Equilvalence Class Name Here" type="text" style="width:200px" /><br />
             <label id="IT1">Enter Equilvalence Class:</label>
@@ -38,7 +38,7 @@
     var y = 1
     function appendRow2() {
         var t = document.getElementById('IP2');
-        t.innerHTML += "<br><b>Enter other Equilavalence Classes:</b>"
+        t.innerHTML += "<br><b>Enter other Equilavalence Classes:</br>"
         t.innerHTML += "<br>Enter Equilvalence class Name: <input type='text' id='tst" + y++ + "'><br >";
         t.innerHTML += "Enter Equilavalence Classes:<input type='text' id='tst" + y++ + "'><br >";
     }
