--- a/GGC.TestCaseGenerator/Views/Home/InputParameter.cshtml
+++ b/GGC.TestCaseGenerator/Views/Home/InputParameter.cshtml
@@ -5,23 +5,44 @@
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 <div class="jumbotron">
-    <div id="IP1">
-        <button onclick="appendRow()" value="Add box">Add InputParameters</button><br>
-        <br> 
-        <input type="text" id="InputParamId" name="InputParamName" /><br /><br />
+    <form method="post">
+        <div id="IP1">
 
-        <label>Add Equivalence Cases</label><br />
-        <input type="text" id="EquivalenceCaseId" name="EquivalenceCaseName" />
-        <br>
-        <br />
-    </div>
+            <br />
+            <p>
+                <h3><b>Click to add other Input Parameter</b></h3>
+                </br>
+                <label id="IN1" name="IN2">Input Name:</label>
+                <input id="IPara1" name="IPara1" placeholder="Enter Input Name Here" type="text" style="width:200px" /><br />
+                <label id="IT1">Input Text:</label>
+                <input id="IPara2" placeholder="Enter Input Text Here" type="text" style="width:200px" />
+                <br>
+        </div>
+
+
+        <div id="IP2">
+            <br />
+            <label><b>Click to add other Equilvalence Classes</b></label>
+            <br />
+            <button onclick="appendRow2()" value="Add box">Add Equilavalence Classes</button><br />
+            <label id="IN1" name="IN2">Enter Equilvalence Class Name:</label>
+            <input id="IPara1" placeholder="Enter Equilvalence Class Name Here" type="text" style="width:200px" /><br />
+            <label id="IT1">Enter Equilvalence Class:</label>
+            <input id="IPara2" placeholder="Enter Equilvalence Class Here" type="text" style="width:200px" />
+            <br>
+
+        </div>
+    </form>
     <script>
-        var x = 1
-        function appendRow() {
-            var d = document.getElementById("IP1");
-            d.innerHTML += "Enter Equivalance Class";
-            d.innerHTML += "<input type='text' id='tst" + x++ + "'><br >";
-            d.innerHTML += "<input type='text' id='tst" + x++ + "'><br >";
-        }
+        var y = 1
+        function appendRow2() {
+            var t = document.getElementById('IP2');
+            t.innerHTML += "<br><b>Enter other Equilavalence Classes:</br>"
+            t.innerHTML += "<br>Enter Equilvalence class Name: <input type='text' id='tst" + y++ + "'><br >";
+            t.innerHTML += "Enter Equilavalence Classes:<input type='text' id='tst" + y++ + "'><br >";
+        }    
+           
     </script>
+
+    <button onclick="" type="submit">Submit</button>
 </div>
