--- a/GGC.TestCaseGenerator/Views/Home/InputParameter.cshtml
+++ b/GGC.TestCaseGenerator/Views/Home/InputParameter.cshtml
@@ -2,10 +2,6 @@
     ViewBag.Title = "Home Page";
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
-<!--@section scripts
-{
-    <script src="~/Scripts/Specification-InputParameters.js"></script>
-}-->
 
 <div class="jumbotron" id="jumbotron">
     <h1>Welcome to Testing centers</h1>
@@ -32,16 +28,20 @@
             <button onclick="appendRow2()" value="Addbox">Add Equilavalence Classes</button><br />
 
             <label id="IN1" name="IN2">Enter Equilvalence Class Name:</label>
-            <input id="IEC1" placeholder="Enter Equilvalence Class Name Here" type="text" style="width:200px" /><br />
+            <!--<input id="IEC1" placeholder="Enter Equilvalence Class Name Here" type="text" style="width:200px" /><br />
             <label id="IT1">Enter Equilvalence Class:</label>
-            <input id="IEC2" placeholder="Enter Equilvalence Class Here" type="text" style="width:200px" />
+            <input id="IEC2" placeholder="Enter Equilvalence Class Here" type="text" style="width:200px" />-->
             <br>
 
         </div>
         <button type="button" id="add">Submit</button>
         <button type="button" onclick="addrecord2()" id="tst">test</button>
         <button type="button" id="display">Display</button>
+        <button type="button" id="TestSubmitTest()" onclick="submitTest()">submitTest() TEST</button>
     </form>
+</div>
+
+
 <script>
     var counter = 0;
     function appendRow2() {
@@ -52,6 +52,23 @@
         t.innerHTML += "<br>Enter Equilvalence class Name: <input type='text' id='EquilvalenceClassesName" + counter + "'><br >";
         t.innerHTML += "Enter Equilavalence Class Text:<input type='text' id='EquilvalenceClassesText" + counter + "'><br >";
     }
+
+    //<===========Test data fetching by Greatzel===========>
+
+    function submitTest()
+    {
+        var testArray = [];
+        console.log("Button Pressed");
+
+        for (var i = 1; i <= counter; i++ )
+        {
+            var equivalenceClass = document.getElementById('EquilvalenceClassesName' + i);
+            var equivalanceClassVal = equivalenceClass.value;
+            testArray.push(equivalanceClassVal);
+        }
+        console.log("submitTest Check " + testArray);
+    }
+    //<====================================================>
 
     let addButton = document.querySelector('#add');
     let displayButton = document.querySelector('#display');
@@ -106,7 +123,5 @@
         console.log(recordsName);
         console.log(recordsText);
         console.log(recordsNametst);
-    }
-    
+    }  
 </script>
-</div>
