commit to track changes in other files

--- a/GGC.TestCaseGenerator/Views/Home/InputParameter.cshtml
+++ b/GGC.TestCaseGenerator/Views/Home/InputParameter.cshtml
@@ -16,7 +16,7 @@
                 <label id="IN1" name="IN2">Input Name:</label>
                 <input id="IPara1" name="IPara1" placeholder="Enter Input Name Here" type="text" style="width:200px" /><br />
                 <label id="IT1">Input Text:</label>
-                <input id="IPara2" placeholder="Enter Input Text Here" type="text" style="width:200px" />
+                <input id="IPara2" name ="IPara2"placeholder="Enter Input Text Here" type="text" style="width:200px" />
                 <br>
         </div>
 
