--- a/GGC.TestCaseGenerator/Views/Home/ExpectedResult.cshtml
+++ b/GGC.TestCaseGenerator/Views/Home/ExpectedResult.cshtml
@@ -2,39 +2,55 @@
     ViewBag.Title = "ExpectedResult";
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
-<style>
-    .labelResult {
-        padding-right: 70px;
-    }
-</style>
-
 <div class="jumbotron">
-    <div id="ER1">
-        <br />
-        <form>
-            <h3><b>Click to add other Expected Results</b></h3><button onclick="appendRow()" value="Add box">Add Expected Results</button>
-            </br>
-            
-                <label>Enter Expected Results Name:</label>
-                <input id="ERName"placeholder="Enter Expected Results Name Here" type="text" style="width:200px" />
-                <br />
-                <label>Enter Expected Results Text:</label>
-                <input placeholder="Enter Equilvalence Class Here" type="text" style="width:200px" />
-                <br>
-                <label>Enter Expected Results Condition:</label>
-                <input placeholder="Enter Expected Results Condition" type="text" style="width:200px" />
-          
-        </form>
-    </div>
+    <form method="post">
+        <div id="ER1">
+            <br />
+            <h3><b>Click to add other Expected Results</b></h3>
+            <button onclick="appendRow()" value="Addbox">Add Expected Results</button>
+            <br />
+            <label>Enter Expected Results Name:</label>
+        </div>
+    </form>
+</div>
+    <button type="submit" onclick="submittingExtraExpectedResults()" id="add">Submit</button>
+    <button type="submit" onclick="displayAllArrayData()" id="display">Display</button>
     <script>
-        var y = 1
+        //Expected Results Arrays below:
+        let ExpectedResultsName = [];
+        let ExpectedResultsText = [];
+        let ExpectedResultsCondition = [];
+        counting = 0;
         function appendRow() {
-            var s = document.getElementById('ER1');
-            s.innerHTML += "<br><b>Enter other Expected Results:</b></p>"
-            s.innerHTML += "<br>Enter Expected Results Name: <input type='text' id='tst" + y++ + "'><br >";
-            s.innerHTML += "Enter Expected Results Text: <input type='text' id='tst" + y++ + "'><br >";
-            s.innerHTML += "Enter Expected Results Condition:<input type='text' id='tst" + y++ + "'><br >";
+            counting++;
+            var h = document.getElementById('ER1');
+            h.innerHTML += "<br>Enter Expected Results Name: <input type='text' id='ExpectedResultsName1" + counting + "'><br >";
+            h.innerHTML += "Enter Expected Results Text:<input type='text' id='ExpectedResultsText1" + counting + "'><br >";
+            h.innerHTML += "Enter Expected Results Condition: <input type='text' id='ExpectedResultsCondition1" + counting + "'><br >";
+        }
+        function submittingExtraExpectedResults() {
+            console.log("Im being cLicked");
+            for (var g = 1; g <= counting; g++) {
+                var ECName = document.getElementById('ExpectedResultsName1' + g);
+                var ECText = document.getElementById('ExpectedResultsText1' + g);
+                var ECCondition = document.getElementById('ExpectedResultsCondition1' + g);
+
+                var ExpectedResultsNameVal = ECName.value;
+                var ExpectedResultsTextVal = ECText.value;
+                var ExpectedResultsConditionVal = ECCondition.value;
+
+                ExpectedResultsName.push(ExpectedResultsNameVal);
+                ExpectedResultsText.push(ExpectedResultsTextVal);
+                ExpectedResultsCondition.push(ExpectedResultsConditionVal);
+            }
+        }
+        function displayAllArrayData() {
+            alert(ExpectedResultsName);
+            alert(ExpectedResultsText);
+            alert(ExpectedResultsCondition);
+            console.log("submitTest ExpectedResultsName Array Check " + ExpectedResultsName);
+            console.log("submitTest ExpectedResultstext Array Check " + ExpectedResultsText);
+            console.log("submitTest ExpectedResultsCondition Array Check " + ExpectedResultsCondition);
         }
     </script>
-    <button onclick="" type="submit">Submit</button>
 </div>
