working on refresh feature

--- a/GGC.TestCaseGenerator/Views/Home/ExpectedResult.cshtml
+++ b/GGC.TestCaseGenerator/Views/Home/ExpectedResult.cshtml
@@ -11,12 +11,11 @@
         <div id="ER1">
             <br />
             <h3><b>Click to add other Expected Results</b></h3>
-            <button onclick="appendRow()" value="Addbox">Add Expected Results</button>
+            <button onclick="appendRow()" class="btn btn-success" value="Addbox">Add Expected Results</button>
             <br />
             <label>Enter Expected Results Name:</label>
         </div>
+        <button type="submit"class="btn btn-success" onclick="submittingExtraExpectedResults()" id="add">Submit</button>
+        <button type="submit" class="btn btn-success" onclick="displayAllArrayData()" id="display">Display</button>
     </form>
-
-    <button type="submit" onclick="submittingExtraExpectedResults()" id="add">Submit</button>
-    <button type="submit" onclick="displayAllArrayData()" id="display">Display</button>
 </div>
