--- a/GGC.TestCaseGenerator/Views/Home/InputParameter.cshtml
+++ b/GGC.TestCaseGenerator/Views/Home/InputParameter.cshtml
@@ -29,12 +29,12 @@
             <br />
             <label><b>Click to add more Equilvalence Classes</b></label>
             <br />
-            <button onclick="appendRow2()" value="Addbox">Add Equilavalence Classes</button><br />
+            <button onclick="appendRow2()"class="btn btn-success" value="Addbox">Add Equilavalence Classes</button><br />
             <label id="IN1" name="IN2">Enter Equilvalence Class Name:</label>
             <br>
         </div>
-        <button type="button" onclick="someFunc()" id="add">Submit</button>
-        <button type="button" id="display">Display</button>
+        <button type="button" class="btn btn-success" onclick="someFunc()" id="add">Submit</button>
+        <button type="button" class="btn btn-success" id="display">Display</button>
     </form>
 </div>
 
