Fix the display button expected results

--- a/GGC.TestCaseGenerator/Views/Home/ExpectedResult.cshtml
+++ b/GGC.TestCaseGenerator/Views/Home/ExpectedResult.cshtml
@@ -16,6 +16,6 @@
             <label>Enter Expected Results Name:</label>
         </div>
         <button type="submit"class="btn btn-success" onclick="submittingExtraExpectedResults()" id="add">Submit</button>
-        <button type="submit" class="btn btn-success" onclick="displayAllArrayData()" id="display">Display</button>
+        <button type="submit" class="btn btn-success" id="display">Display</button>
     </form>
 </div>
