--- a/GGC.TestCaseGenerator/GGC.TestCaseGenerator/Views/Home/Result.cshtml
+++ b/GGC.TestCaseGenerator/GGC.TestCaseGenerator/Views/Home/Result.cshtml
@@ -14,7 +14,7 @@
     <form method="post">
     <div id="showRes">
     </div><br />
-        <input class="btn btn-success" onclick="" type="submit" value="Generate Json File" /><br /><br />
+        <input class="btn btn-success" onclick="storageClear()" type="submit" value="Submit" /><br /><br />
     </form> <br /><br />
     <input type="file" id="selectFiles" value="Upload" /><br />
     <button id="import">Import</button><br /><br />
