working version of GUI only

--- a/GGC.TestCaseGenerator/GGC.TestCaseGenerator/Views/Home/CoverageGroup.cshtml
+++ b/GGC.TestCaseGenerator/GGC.TestCaseGenerator/Views/Home/CoverageGroup.cshtml
@@ -54,7 +54,7 @@
 
             </div>
 
-            <input class="btn btn-success" onclick="SubmitGroupName()" type="submit" value="Submit Coverage Group" />
+            <input id="addCoverage" class="btn btn-success" onclick="SubmitGroupName()" type="submit" value="Submit Coverage Group" />
             <br>
         </form>
     </div>
